k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygoapplication
  namespace: default
  labels:
    app: go-web-app
spec:
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  mygoappconatiner
        image: 28cloud/goapppcicdimage:v1
        ports:
        - containerPort:  8080
          name: go-web-app-conatiner
