k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygoapp-service
  labels:
   app: go-web-app
spec:
  selector:
   app: go-web-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
